--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,17 @@
-div{
-    /* color: #000;
-    position: relative; */
+*{margin: 0;padding: 0;box-sizing: border-box;}
+
+#div1{
+    position:fixed;
+    top:10px;
+    left: 300px;
+}
+#div1::before{
+    content:'';
+    display:block;
+    position:absolute; 
+}
+#div1::after{
+    content:'';
+    display:block;
+    position:absolute;
 }
