--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,16 @@
 *{margin: 0;padding: 0;box-sizing: border-box;}
+*::before,*::after{box-sizing: border-box;}
 
+#html{
+    word-break: break-all
+}
 #div1{
     position:fixed;
-    top:10px;
-    left: 300px;
+    top:50px;
+    left:50%;
+    margin-left:-100px; /* width的一半的相反数 */
+    z-index:999;
+    
 }
 #div1::before{
     content:'';
@@ -14,4 +21,14 @@
     content:'';
     display:block;
     position:absolute;
+}
+@media(max-width:500px){
+    #html{
+        height: 50vh;
+        overflow: auto;
+    }
+    #div1{
+        height: 50vh;
+        position: relative;
+    }
 }
